--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -71,5 +71,6 @@
     <script src="<?php echo PATH_PUBLIC; ?>js/jquery-2.1.3.min.js"></script>
     <script src="<?php echo PATH_PUBLIC; ?>js/tablesorter/jquery.tablesorter.min.js" type="text/javascript"></script>
     <script src="<?php echo PATH_PUBLIC; ?>css/sb-admin/js/bootstrap.min.js"></script>
+    <script src="<?php echo PATH_PUBLIC; ?>js/jquery.maskedinput.js"></script>
 </body>
 </html>
