--- a/app/views/fornecedoresIncluir.phtml
+++ b/app/views/fornecedoresIncluir.phtml
@@ -3,20 +3,21 @@
         $("#Celular").mask("(99) 9999-9999");
     });
 </script>
+
 <div id="wrapper">
     <div id="page-content-wrapper">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">	    
-
-                    <?php echo HtmlUtils::Alerta($this->session->getAlerta()); ?>
+                    
+                    <?php echo Alert::render(); ?>
 
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h3 class="panel-title">Fornecedor</h3>
                         </div>
                         <div class="panel-body">
-                            <form action="/TESTE/fornecedores/gravar" role="form" method="post">
+                            <form action="/TESTE/fornecedores/gravar" id="reservationForm" role="form" method="post">
                                 <div class="form-group">
                                     <label for="Nome">Nome do Fornecedor</label>
                                     <input type="text" name="RegForm[Nome]" class="form-control" id="Nome" required
