--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -46,9 +46,9 @@
             <ul class="nav navbar-right top-nav">             
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>
-                        <?php echo $_SESSION['UsuarioNome']; ?><b class="caret"></b></a>
+                        <?php echo Session::get('UsuarioNome'); ?><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="formulario.php?id=<?php echo $_SESSION['UsuarioID']; ?>">
+                        <li><a href="formulario.php?id=<?php echo Session::get('UsuarioID'); ?>">
                             <i class="fa fa-fw fa-user"></i> Cadastro</a></li>
                         <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a></li>
                         <li><a href="#"><i class="fa fa-fw fa-gear"></i> Configurações</a></li>
