--- a/app/views/404.phtml
+++ b/app/views/404.phtml
@@ -1,21 +1,21 @@
-<?php  
-  $mensagem = isset($_SESSION["AlertaMsg"]) ? $_SESSION["AlertaMsg"] : null;
-?>
-
 <div id="wrapper">
     <div id="page-content-wrapper">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">	    
-
-                    <?php echo HtmlUtils::Alerta($mensagem); ?>
-
                     <div class="panel panel-danger">
                         <div class="panel-heading">
-                            <h3 class="panel-title">ERRO</h3>
+                            <h3 class="panel-title">ERRO 404</h3>
                         </div>
                         <div class="panel-body">
-                            <p>Página não encontrada!</p>
+                            <h3 style="color:red">Página não encontrada!</h3>
+                            <br />                            
+                            <?php 
+                                $msgErro = Session::get('msgErro');
+                                foreach ($msgErro as $msg) {
+                                    echo "<p>".$msg."</p>";
+                                }
+                            ?>                            
                         </div>
                     </div>
                 </div>
