--- a/app/views/404.phtml
+++ b/app/views/404.phtml
@@ -15,7 +15,10 @@
                                 foreach ($msgErro as $msg) {
                                     echo "<p>".$msg."</p>";
                                 }
-                            ?>                            
+                            ?>
+                            <br />
+                            <a href="<?php echo PATH; ?>" class="btn btn-large btn-info">
+                                <i class="icon-home icon-white"></i>HOME</a>
                         </div>
                     </div>
                 </div>
