--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -20,8 +20,8 @@
     <meta name="description" content="Exemplo utilizando MVC e Templates em PHP">
     <meta name="author" content="JEAN FABIO FUCHS">
     <title>Teste</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <!--link href="<?php echo PATH_PUBLIC; ?>css/sb-admin/css/bootstrap.min.css" rel="stylesheet"-->
+    <!--link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"-->
+    <link href="<?php echo PATH_PUBLIC; ?>css/sb-admin/css/bootstrap.css" rel="stylesheet">
     <link href="<?php echo PATH_PUBLIC; ?>css/sb-admin/css/sb-admin.css" rel="stylesheet">
     <link href="<?php echo PATH_PUBLIC; ?>css/sb-admin/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">  
     <link href="<?php echo PATH_PUBLIC; ?>js/tablesorter/themes/blue/style2.css" rel="stylesheet" type="text/css">
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" href="<?php echo PATH; ?>">HOME</a>
+                <a class="navbar-brand" href="<?php echo PATH; ?>"><i class="fa fa-home"></i> HOME</a>
             </div>
 
             <!-- Top Menu Items -->
