--- a/app/views/fornecedoresIncluir.phtml
+++ b/app/views/fornecedoresIncluir.phtml
@@ -8,8 +8,6 @@
     <div id="wrapper">
         <div id="page-wrapper">
             <div class="container-fluid">
-
-                <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">                        
 
@@ -25,13 +23,12 @@
                         <form action="/TESTE/fornecedores/gravar" id="reservationForm" role="form" method="post">
                             <div class="form-group">
                                 <label for="Nome">Nome do Fornecedor</label>
-                                <input type="text" name="RegForm[Nome]" class="form-control" id="Nome" required
-                                       value="<?php echo $view_get["Nome"]; ?>">
+                                <input type="text" name="RegForm[Nome]" class="form-control" id="Nome" required value="<?php echo $view_get["Nome"]; ?>">
                             </div>
 
                             <div class="form-group">
                                 <label for="Celular">Celular</label>
-                                <input type="text" name="RegForm[Celular]" class="form-control" id="Celular"       required value="<?php echo $view_get["Celular"]; ?>">
+                                <input type="text" name="RegForm[Celular]" class="form-control" id="Celular" required value="<?php echo $view_get["Celular"]; ?>">
                             </div>
                                 
                             <div>
