--- a/app/views/fornecedoresIncluir.phtml
+++ b/app/views/fornecedoresIncluir.phtml
@@ -9,16 +9,20 @@
         <div id="page-wrapper">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12">                        
+                    <div class="col-lg-12">
+                        <p>
 
-                        <h1 class="page-header">
-                            Fornecedor
-                            <small>Edição</small>                            
-                        </h1>    
-                    
                         <?php echo Alert::render(); ?>
+                        
+                        <?php echo Session::get('yyy'); ?>
 
                         <?php echo HtmlUtils::MontarBreadCrumbs('Editar', 'Fornecedores', $view_linkCancelar, $view_get["ID"]); ?>
+
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <strong>Informe os dados do Fornecedor</strong>
+                            </div>
+                        <div class="panel-body">
                     
                         <form action="/TESTE/fornecedores/gravar" id="reservationForm" role="form" method="post">
                             <div class="form-group">
@@ -39,6 +43,7 @@
                                 <a class="btn btn-warning" href="<?php echo $view_linkCancelar; ?>">Cancelar</a>
                             </div>
                         </form>
+                        </div>
                     </div>
                 </div>                       
             </div>            
