--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -8,7 +8,7 @@
 
     $menus = [];
     $menus[] = array("fornecedores", "Fornecedores", 'table');
-    $menus[] = array("alunos", "Alunos", 'table');
+    $menus[] = array("cidades", "Cidades", 'table');
     $menus[] = array("marcacaoPratica", "Marcação de Aula Prática com Instrutor Habilitado pelo DETRAN", 'table');
 ?> 
 
