--- a/app/views/usuarioLogin.phtml
+++ b/app/views/usuarioLogin.phtml
@@ -2,20 +2,20 @@
     <div id="wrapper">
         <div id="page-wrapper">
             <div class="container-fluid">
-                <div class="row">                    
-                    
+                <div class="row">
+
                     <div class="col-md-84 col-md-offset-2">
                         <p>
                         <?php echo Alert::render(); ?>
                     </div>
 
-                    <div class="col-md-4 col-md-offset-4">                        
+                    <div class="col-md-4 col-md-offset-4">
                         <div class="login-panel panel panel-default">
                             <div class="panel-heading">
                                 <h3 class="panel-title">Login</h3>
                             </div>
                             <div class="panel-body">
-                                <form action="<?php echo PATH; ?>usuario/logar" role="form" method="post">
+                                <form action="<?php echo PATH; ?>login/logar" role="form" method="post">
                                     <fieldset>
                                         <div class="form-group">
                                             <input class="form-control" name="RegForm[ID]" placeholder="Usuário" id="ID" type="text" required autofocus>
@@ -28,8 +28,9 @@
                                                 <input name="remember" type="checkbox" value="Lembrar-me">Lembrar-me
                                             </label>
                                         </div>
-                                        
-                                        <input class="btn btn-lg btn-success btn-block" type="submit" value="Logar">
+
+                                        <button class="btn btn-lg btn-success btn-block" type="submit" value="Logar">
+                                        <i class="fa fa-sign-in"></i> Entrar</button>
                                     </fieldset>
                                 </form>
                             </div>
